<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".adminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/rcreateadmin"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:text="Create Admin"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/rcompanyname"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:hint="@string/company_name" />

    <EditText
        android:id="@+id/rcompanyaddress"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/company_address" />

    <EditText
        android:id="@+id/radminusername"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:hint="@string/admin_user_name" />

    <EditText
        android:id="@+id/ruserpassword"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:hint="@string/user_password" />

    <EditText
        android:id="@+id/rconfirmpassword"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:hint="@string/retype_password" />

    <EditText
        android:id="@+id/rcompanylogo"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:hint="@string/company_logo" />

    <Button
        android:id="@+id/rcreate"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/create" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ralreadyregistered"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered" />
        <TextView
            android:id="@+id/rln"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/login_now" />

    </LinearLayout>




</LinearLayout>